# devopscalc1

./: README.md  setup.cfg  setup.py
.github/workflows/: master_calculatorbcas.yml
src/calculator/: main.py
src/calculator.egg-info/: PKG-INFO  SOURCES.txt
src/calculator/templates/: form.html  result.html
