[metadata]
name = calculator
version = 0.0.1
author = Ahamed Careem, Amsith Athambawa, Ahmath Musharraf, Nushath Nisardeen
description = A small coding activity for Solent University DevOps Group Project
long_description = file: README.md
long_description_content_type = text/markdown
;url = https://github.com/amcareem/SOLENTbcasDevOpsBCC629
;project_urls =
;    https://github.com/Nushath/SOLENTbcasDevOpsBCC629
project_urls =
    github = https://github.com/Nushath/SOLENTbcasDevOpsBCC629
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src
